# ckks-experiment

./: CMakeLists_v1.txt  README.md
examples/demo_addsub/: CMakeLists.txt  CMakeLists_v1.txt  README.md
examples/demo_addsub/data/: vectorA.csv  vectorB.csv
examples/demo_addsub/src/: context.cpp  context.hpp  crypt.cu  crypt.hpp  data_loading.cpp  data_loading.hpp  main.cu
src/CKKS/: ApproxModEval.cu.save  Bootstrap.cu  Ciphertext.cu  CoeffsToSlots.cu  Context.cu  KeySwitchingKey.cu  Plaintext.cu
